force-app/main/default/objects/GYNCO_Configuration__c/GYNCO_Configuration__c.object-meta.xml
<CustomObject>
    <label>Configuration</label>
    <nameField>
        <label>SAP Object Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Configurations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>