force-app/main/default/objects/GYNCO_Configuration__c/fields/GYANF_SAP_Object_API__c.field-meta.xml
<CustomField>
    <fullName>GYANF_SAP_Object_API__c</fullName>
    <label>SAP Object API</label>
    <length>255</length>
    <type>Text</type>
</CustomField>