force-app/main/default/objects/GYNCO_Configuration__c/fields/GYNC_Related_list_Column__c.field-meta.xml
<CustomField>
    <fullName>GYNC_Related_list_Column__c</fullName>
    <label>Related list Column</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>