force-app/main/default/objects/GYNCO_Configuration__c/fields/GYNCF_Archived__c.field-meta.xml
<CustomField>
    <fullName>GYNCF_Archived__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Archived</label>
    <type>Checkbox</type>
</CustomField>