force-app/main/default/objects/GYNCO_Configuration__c/fields/GYNCF_Availability_Of_Objects__c.field-meta.xml
<CustomField>
    <fullName>GYNCF_Availability_Of_Objects__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Availability Of Objects</label>
    <type>Checkbox</type>
</CustomField>