force-app/main/default/objects/GYNCO_Configuration__c/fields/GYNCF_Available_Fileters__c.field-meta.xml
<CustomField>
    <fullName>GYNCF_Available_Fileters__c</fullName>
    <label>Available Filters</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>