force-app/main/default/objects/GYNCO_Configuration__c/fields/GYNCF_Batch_Size__c.field-meta.xml
<CustomField>
    <fullName>GYNCF_Batch_Size__c</fullName>
    <label>Batch Size</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>