force-app/main/default/objects/GYNCO_Configuration__c/fields/GYNCF_Bill_To__c.field-meta.xml
<CustomField>
    <fullName>GYNCF_Bill_To__c</fullName>
    <label>Bill To</label>
    <length>20</length>
    <type>Text</type>
</CustomField>