force-app/main/default/objects/GYNCO_Configuration__c/fields/GYNCF_Billing_Block__c.field-meta.xml
<CustomField>
    <fullName>GYNCF_Billing_Block__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Billing Block</label>
    <type>Checkbox</type>
</CustomField>