force-app/main/default/objects/GYNCO_Configuration__c/fields/GYNCF_Billing_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>GYNCF_Billing_Start_Date__c</fullName>
    <label>Billing Start Date</label>
    <type>Date</type>
</CustomField>