force-app/main/default/objects/GYNCO_Configuration__c/fields/GYNCF_Billing_Type__c.field-meta.xml
<CustomField>
    <fullName>GYNCF_Billing_Type__c</fullName>
    <label>Billing Type</label>
    <length>10</length>
    <type>Text</type>
</CustomField>