force-app/main/default/objects/GYNCO_Configuration__c/fields/GYNCF_Company_Code__c.field-meta.xml
<CustomField>
    <fullName>GYNCF_Company_Code__c</fullName>
    <label>Company Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>