force-app/main/default/objects/GYNCO_Configuration__c/fields/GYNCF_Create__c.field-meta.xml
<CustomField>
    <fullName>GYNCF_Create__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Create</label>
    <type>Checkbox</type>
</CustomField>