force-app/main/default/objects/GYNCO_Configuration__c/fields/GYNCF_CRON_Expression__c.field-meta.xml
<CustomField>
    <fullName>GYNCF_CRON_Expression__c</fullName>
    <label>CRON Expression</label>
    <type>TextArea</type>
</CustomField>