force-app/main/default/objects/GYNCO_Configuration__c/fields/GYNCF_Customer_Number__c.field-meta.xml
<CustomField>
    <fullName>GYNCF_Customer_Number__c</fullName>
    <label>Customer Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>