force-app/main/default/objects/GYNCO_Configuration__c/fields/GYNCF_Date_Range_From__c.field-meta.xml
<CustomField>
    <fullName>GYNCF_Date_Range_From__c</fullName>
    <label>Date Range From</label>
    <type>Date</type>
</CustomField>