force-app/main/default/objects/GYNCO_Configuration__c/fields/GYNCF_Date_Range_To__c.field-meta.xml
<CustomField>
    <fullName>GYNCF_Date_Range_To__c</fullName>
    <label>Date Range To</label>
    <type>Date</type>
</CustomField>