force-app/main/default/objects/GYNCO_Configuration__c/fields/GYNCF_Default_Order_Status__c.field-meta.xml
<CustomField>
    <fullName>GYNCF_Default_Order_Status__c</fullName>
    <label>Default Order Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>