force-app/main/default/objects/GYNCO_Configuration__c/fields/GYNCF_Default_Quote_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>GYNCF_Default_Quote_Opportunity__c</fullName>
    <label>Default Quote Opportunity</label>
    <length>18</length>
    <type>Text</type>
</CustomField>