force-app/main/default/objects/GYNCO_Configuration__c/fields/GYNCF_Delivery_Block__c.field-meta.xml
<CustomField>
    <fullName>GYNCF_Delivery_Block__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Delivery Block</label>
    <type>Checkbox</type>
</CustomField>