force-app/main/default/objects/GYNCO_Configuration__c/fields/GYNCF_Distribution_Channel__c.field-meta.xml
<CustomField>
    <fullName>GYNCF_Distribution_Channel__c</fullName>
    <label>Distribution Channel</label>
    <length>10</length>
    <type>Text</type>
</CustomField>