force-app/main/default/objects/GYNCO_Configuration__c/fields/GYNCF_Division__c.field-meta.xml
<CustomField>
    <fullName>GYNCF_Division__c</fullName>
    <label>Division</label>
    <length>10</length>
    <type>Text</type>
</CustomField>