force-app/main/default/objects/GYNCO_Configuration__c/fields/GYNCF_Document_Type__c.field-meta.xml
<CustomField>
    <fullName>GYNCF_Document_Type__c</fullName>
    <label>Document Type</label>
    <length>10</length>
    <type>Text</type>
</CustomField>