force-app/main/default/objects/GYNCO_Configuration__c/fields/GYNCF_DyanamicChildItemQuery__c.field-meta.xml
<CustomField>
    <fullName>GYNCF_DyanamicChildItemQuery__c</fullName>
    <label>DyanamicChildItemQuery</label>
    <length>250</length>
    <type>Text</type>
</CustomField>