force-app/main/default/objects/GYNCO_Configuration__c/fields/GYNCF_Equipment_Category__c.field-meta.xml
<CustomField>
    <fullName>GYNCF_Equipment_Category__c</fullName>
    <label>Equipment Category</label>
    <length>10</length>
    <type>Text</type>
</CustomField>