force-app/main/default/objects/GYNCO_Configuration__c/fields/GYNCF_Field_Maping__c.field-meta.xml
<CustomField>
    <fullName>GYNCF_Field_Maping__c</fullName>
    <label>Field Maping</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>