force-app/main/default/objects/GYNCO_Configuration__c/fields/GYNCF_Fiscal_Year__c.field-meta.xml
<CustomField>
    <fullName>GYNCF_Fiscal_Year__c</fullName>
    <label>Fiscal Year</label>
    <length>10</length>
    <type>Text</type>
</CustomField>