force-app/main/default/objects/GYNCO_Configuration__c/fields/GYNCF_Identifier_SAP__c.field-meta.xml
<CustomField>
    <fullName>GYNCF_Identifier_SAP__c</fullName>
    <label>Identifier SAP</label>
    <length>255</length>
    <type>Text</type>
</CustomField>