force-app/main/default/objects/GYNCO_Configuration__c/fields/GYNCF_isFLSActive__c.field-meta.xml
<CustomField>
    <fullName>GYNCF_isFLSActive__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isFLSActive</label>
    <type>Checkbox</type>
</CustomField>