force-app/main/default/objects/GYNCO_Configuration__c/fields/GYNCF_Last_Synced__c.field-meta.xml
<CustomField>
    <fullName>GYNCF_Last_Synced__c</fullName>
    <label>Last Synced</label>
    <type>DateTime</type>
</CustomField>