force-app/main/default/objects/GYNCO_Configuration__c/fields/GYNCF_LineItem_ParentField_Api__c.field-meta.xml
<CustomField>
    <fullName>GYNCF_LineItem_ParentField_Api__c</fullName>
    <label>LineItem ParentField Api</label>
    <length>255</length>
    <type>Text</type>
</CustomField>