force-app/main/default/objects/GYNCO_Configuration__c/fields/GYNCF_LineItemBodyTitle__c.field-meta.xml
<CustomField>
    <fullName>GYNCF_LineItemBodyTitle__c</fullName>
    <label>LineItemBodyTitle</label>
    <length>250</length>
    <type>Text</type>
</CustomField>