force-app/main/default/objects/GYNCO_Configuration__c/fields/GYNCF_Mass_Sync__c.field-meta.xml
<CustomField>
    <fullName>GYNCF_Mass_Sync__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Mass Sync</label>
    <type>Checkbox</type>
</CustomField>