force-app/main/default/objects/GYNCO_Configuration__c/fields/GYNCF_Mass_Sync_Frequency__c.field-meta.xml
<CustomField>
    <fullName>GYNCF_Mass_Sync_Frequency__c</fullName>
    <label>Mass Sync Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Weekly</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Daily</fullName>
                <isActive>false</isActive>
                <label>Daily</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>