force-app/main/default/objects/GYNCO_Configuration__c/fields/GYNCF_Mass_Sync_Live__c.field-meta.xml
<CustomField>
    <fullName>GYNCF_Mass_Sync_Live__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Mass Sync Live</label>
    <type>Checkbox</type>
</CustomField>