force-app/main/default/objects/GYNCO_Configuration__c/fields/GYNCF_Material_Group__c.field-meta.xml
<CustomField>
    <fullName>GYNCF_Material_Group__c</fullName>
    <label>Material Group</label>
    <length>10</length>
    <type>Text</type>
</CustomField>