force-app/main/default/objects/GYNCO_Configuration__c/fields/GYNCF_Monthly_Number_Option__c.field-meta.xml
<CustomField>
    <fullName>GYNCF_Monthly_Number_Option__c</fullName>
    <label>Monthly Number Option</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <default>true</default>
                <label>1</label>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>last</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>