force-app/main/default/objects/GYNCO_Configuration__c/fields/GYNCF_Nodes_for_SAP_API__c.field-meta.xml
<CustomField>
    <fullName>GYNCF_Nodes_for_SAP_API__c</fullName>
    <label>Nodes for SAP API</label>
    <type>TextArea</type>
</CustomField>