force-app/main/default/objects/GYNCO_Configuration__c/fields/GYNCF_Operation_Type__c.field-meta.xml
<CustomField>
    <fullName>GYNCF_Operation_Type__c</fullName>
    <label>Operation Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Business Object Sync</fullName>
            </value>
            <value>
                <fullName>Table Replication Sync</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>