force-app/main/default/objects/GYNCO_Configuration__c/fields/GYNCF_PricebookApi_Name__c.field-meta.xml
<CustomField>
    <fullName>GYNCF_PricebookApi_Name__c</fullName>
    <label>PricebookApi Name</label>
    <length>250</length>
    <type>Text</type>
</CustomField>