force-app/main/default/objects/GYNCO_Configuration__c/fields/GYNCF_PricebookEntry_Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>GYNCF_PricebookEntry_Field_API_Name__c</fullName>
    <label>PricebookEntry Field API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>