force-app/main/default/objects/GYNCO_Configuration__c/fields/GYNCF_Quote_Id__c.field-meta.xml
<CustomField>
    <fullName>GYNCF_Quote_Id__c</fullName>
    <label>Quote Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>