force-app/main/default/objects/GYNCO_Configuration__c/fields/GYNCF_Sales_Org__c.field-meta.xml
<CustomField>
    <fullName>GYNCF_Sales_Org__c</fullName>
    <label>Sales Org</label>
    <length>10</length>
    <type>Text</type>
</CustomField>