force-app/main/default/objects/GYNCO_Configuration__c/fields/GYNCF_SalesOrder_Quote_Filter__c.field-meta.xml
<CustomField>
    <fullName>GYNCF_SalesOrder_Quote_Filter__c</fullName>
    <label>SalesOrder/Quote Filter</label>
    <length>1</length>
    <type>Text</type>
</CustomField>