force-app/main/default/objects/GYNCO_Configuration__c/fields/GYNCF_SAP_API_Fields__c.field-meta.xml
<CustomField>
    <fullName>GYNCF_SAP_API_Fields__c</fullName>
    <label>SAP API Fields</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>