force-app/main/default/objects/GYNCO_Configuration__c/fields/GYNCF_SAP_Condition_Type__c.field-meta.xml
<CustomField>
    <fullName>GYNCF_SAP_Condition_Type__c</fullName>
    <label>SAP Condition Type</label>
    <length>10</length>
    <type>Text</type>
</CustomField>