force-app/main/default/objects/GYNCO_Configuration__c/fields/GYNCF_Search__c.field-meta.xml
<CustomField>
    <fullName>GYNCF_Search__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Search</label>
    <type>Checkbox</type>
</CustomField>