force-app/main/default/objects/GYNCO_Configuration__c/fields/GYNCF_Service_URL__c.field-meta.xml
<CustomField>
    <fullName>GYNCF_Service_URL__c</fullName>
    <label>Service URL</label>
    <type>Url</type>
</CustomField>