force-app/main/default/objects/GYNCO_Configuration__c/fields/GYNCF_SFDC_Child_Object_Name__c.field-meta.xml
<CustomField>
    <fullName>GYNCF_SFDC_Child_Object_Name__c</fullName>
    <label>SFDC Child Object Name</label>
    <length>20</length>
    <type>Text</type>
</CustomField>