force-app/main/default/objects/GYNCO_Configuration__c/fields/GYNCF_Synced__c.field-meta.xml
<CustomField>
    <fullName>GYNCF_Synced__c</fullName>
    <label>Synced</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>