force-app/main/default/objects/GYNCO_Configuration__c/fields/GYNCF_System_Id__c.field-meta.xml
<CustomField>
    <fullName>GYNCF_System_Id__c</fullName>
    <description>It will store the 18 digit salesforce id of the Authorization Custom setting.</description>
    <label>System Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>