force-app/main/default/objects/GYNCO_Configuration__c/fields/GYNCF_System_Status__c.field-meta.xml
<CustomField>
    <fullName>GYNCF_System_Status__c</fullName>
    <label>System Status</label>
    <length>10</length>
    <type>Text</type>
</CustomField>