force-app/main/default/objects/GYNCO_Configuration__c/fields/GYNCF_Time__c.field-meta.xml
<CustomField>
    <fullName>GYNCF_Time__c</fullName>
    <label>Time</label>
    <type>Time</type>
</CustomField>