force-app/main/default/objects/GYNCO_Configuration__c/fields/GYNCF_To_Be_Synced__c.field-meta.xml
<CustomField>
    <fullName>GYNCF_To_Be_Synced__c</fullName>
    <label>To Be Synced</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>