force-app/main/default/objects/GYNCO_Configuration__c/fields/GYNF_Object_Icon__c.field-meta.xml
<CustomField>
    <fullName>GYNF_Object_Icon__c</fullName>
    <label>GYNF Object Icon</label>
    <length>255</length>
    <type>Text</type>
</CustomField>