force-app/main/default/objects/GYNCO_Configuration__c/fields/GYNPS_adminMasterDataPermission__c.field-meta.xml
<CustomField>
    <fullName>GYNPS_adminMasterDataPermission__c</fullName>
    <defaultValue>false</defaultValue>
    <label>GYNPS_adminMasterDataPermission</label>
    <type>Checkbox</type>
</CustomField>