force-app/main/default/objects/GYNCO_Configuration__c/fields/GYNPS_adminSalesConnectPermission__c.field-meta.xml
<CustomField>
    <fullName>GYNPS_adminSalesConnectPermission__c</fullName>
    <defaultValue>false</defaultValue>
    <label>GYNPS_adminSalesConnectPermission</label>
    <type>Checkbox</type>
</CustomField>