force-app/main/default/objects/GYNCO_Configuration__c/fields/GYNPS_anyConnectPermission__c.field-meta.xml
<CustomField>
    <fullName>GYNPS_anyConnectPermission__c</fullName>
    <defaultValue>false</defaultValue>
    <label>GYNPS_anyConnectPermission</label>
    <type>Checkbox</type>
</CustomField>