force-app/main/default/objects/GYNCO_Configuration__c/fields/GYNPS_customerPermission__c.field-meta.xml
<CustomField>
    <fullName>GYNPS_customerPermission__c</fullName>
    <defaultValue>false</defaultValue>
    <label>GYNPS_customerPermission</label>
    <type>Checkbox</type>
</CustomField>