force-app/main/default/objects/GYNCO_Configuration__c/fields/GYNPS_equipmentPermission__c.field-meta.xml
<CustomField>
    <fullName>GYNPS_equipmentPermission__c</fullName>
    <defaultValue>false</defaultValue>
    <label>GYNPS_equipmentPermission</label>
    <type>Checkbox</type>
</CustomField>