force-app/main/default/objects/GYNCO_Configuration__c/fields/GYNPS_invoicePermission__c.field-meta.xml
<CustomField>
    <fullName>GYNPS_invoicePermission__c</fullName>
    <defaultValue>false</defaultValue>
    <label>GYNPS_invoicePermission</label>
    <type>Checkbox</type>
</CustomField>