force-app/main/default/objects/GYNCO_Configuration__c/fields/GYNPS_masterDataPermission__c.field-meta.xml
<CustomField>
    <fullName>GYNPS_masterDataPermission__c</fullName>
    <defaultValue>false</defaultValue>
    <label>GYNPS_masterDataPermission</label>
    <type>Checkbox</type>
</CustomField>