force-app/main/default/objects/GYNCO_Configuration__c/fields/GYNPS_materialPermission__c.field-meta.xml
<CustomField>
    <fullName>GYNPS_materialPermission__c</fullName>
    <defaultValue>false</defaultValue>
    <label>GYNPS_materialPermission</label>
    <type>Checkbox</type>
</CustomField>