force-app/main/default/objects/GYNCO_Configuration__c/fields/GYNPS_orderPermission__c.field-meta.xml
<CustomField>
    <fullName>GYNPS_orderPermission__c</fullName>
    <defaultValue>false</defaultValue>
    <label>GYNPS_orderPermission</label>
    <type>Checkbox</type>
</CustomField>