force-app/main/default/objects/GYNCO_Configuration__c/fields/GYNPS_quotePermission__c.field-meta.xml
<CustomField>
    <fullName>GYNPS_quotePermission__c</fullName>
    <defaultValue>false</defaultValue>
    <label>GYNPS_quotePermission</label>
    <type>Checkbox</type>
</CustomField>