force-app/main/default/objects/GYNCO_Configuration__c/fields/GYNPS_salesConnectPermission__c.field-meta.xml
<CustomField>
    <fullName>GYNPS_salesConnectPermission__c</fullName>
    <defaultValue>false</defaultValue>
    <label>GYNPS_salesConnectPermission</label>
    <type>Checkbox</type>
</CustomField>