force-app/main/default/objects/GYNCO_Configuration__c/fields/Has_Column_Field__c.field-meta.xml
<CustomField>
    <fullName>Has_Column_Field__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Column Field</label>
    <type>Checkbox</type>
</CustomField>