force-app/main/default/objects/GYNCO_Configuration__c/fields/Scheduler_information__c.field-meta.xml
<CustomField>
    <fullName>Scheduler_information__c</fullName>
    <label>Scheduler information</label>
    <length>100</length>
    <type>Text</type>
</CustomField>