force-app/main/default/objects/GYNCO_Configuration__c/fields/Sync_Only_DELTA__c.field-meta.xml
<CustomField>
    <fullName>Sync_Only_DELTA__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sync Only DELTA</label>
    <type>Checkbox</type>
</CustomField>