force-app/main/default/objects/GYNCO_Configuration__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>GYNCF_System_Id__c</columns>
    <columns>GYNCF_Service_URL__c</columns>
    <columns>GYNCF_Available_Fileters__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>